# rws-semantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
results/: toelichting.ipynb
src/: convert_to_pdf.sh
src/pattern/: detect_eisen.py
src/similarity/: main.py
